--- a/dork_compose/auxiliary/proxy/dockergen/nginx.tmpl
+++ b/dork_compose/auxiliary/proxy/dockergen/nginx.tmpl
@@ -171,6 +171,9 @@ server {
 	{{ end }}
 
 	location / {
+	        more_set_headers 'Access-Control-Allow-Origin: $http_origin';
+                more_set_headers 'Access-Control-Allow-Credentials: true';
+		more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE';
 		proxy_pass {{ trim $proto }}://{{ trim $host }};
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
@@ -200,6 +203,9 @@ server {
 	{{ end }}
 
 	location / {
+	        more_set_headers 'Access-Control-Allow-Origin: $http_origin';
+                more_set_headers 'Access-Control-Allow-Credentials: true';
+		more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE';
 		proxy_pass {{ trim $proto }}://{{ trim $host }};
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
